...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/navbutton_recipe_previous_button"
        android:layout_width="@dimen/navbutton_recipe_step_button_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nav_button_previous"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/navbutton_recipe_step_button_padding_vertical"
        android:paddingRight="@dimen/navbutton_recipe_step_button_padding_horizontal"
        android:layout_marginEnd="@dimen/navbutton_recipe_step_button_margin"/>

    <TextView
        android:id="@+id/navbutton_recipe_next_button"
        android:layout_width="@dimen/navbutton_recipe_step_button_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nav_button_next"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
...
