<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_recipe_master_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.example.shoji.bakingapp.ui.RecipeMasterListFragment" />
