...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/fragment_recipe_step_guideline_1"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/fragment_recipe_step_long_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_recipe_step_guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
